--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,9 +54,9 @@ a {
 
 .not_found {
   width: 100%;
-  height: 65dvh;
+  height: 100dvh;
   background-color: #000;
-  color: #FFF;
+  color: #fff;
 }
 
 .not_found_wrapper {
@@ -73,7 +73,6 @@ a {
   text-align: center;
 }
 .not_found_wrapper h3 {
-  margin-top: 120px;
   font-family: PhonkFont;
   font-size: 70px;
   text-align: center;
@@ -97,7 +96,7 @@ a {
   font-family: PhonkFont;
   font-size: 18px;
   text-decoration: none;
-  color: #FFF;
+  color: #fff;
 }
 
 .swiper {
@@ -117,7 +116,6 @@ a {
   }
 }
 
-
 .swiper-slide {
   display: flex;
   justify-content: center;
@@ -125,7 +123,7 @@ a {
   font-size: 18px;
   text-align: center;
   background: #000;
-  color: #FFF;
+  color: #fff;
 }
 
 .swiper-slide img {
@@ -138,7 +136,7 @@ a {
 .swiper-button-prev,
 .swiper-button-next,
 .swiper-pagination {
-  color: #FFF !important;
+  color: #fff !important;
 }
 
 @media only screen and (max-width: 1024px) {
