--- a/src/components/homepage/section-brands/styles.module.css
+++ b/src/components/homepage/section-brands/styles.module.css
@@ -43,7 +43,9 @@
   }
 
   .section_brands_title h2 {
-    font-size: 2rem;
+    margin: 0 auto;
+    max-width: 80%;
+    font-size: 1.4rem;
   }
 
   .section_brands_wrapper {
@@ -58,7 +60,7 @@
   }
 
   .section_brands_title h2 {
-    font-size: 2rem;
+    font-size: 1.4rem;
     padding: 0 40px;
   }
 
