--- a/src/components/common/section-about-monomito/styles.module.css
+++ b/src/components/common/section-about-monomito/styles.module.css
@@ -57,7 +57,7 @@
 
 @media only screen and (max-width: 1024px) {
   .about_monomito {
-    padding: 10% 7%;
+    padding-bottom: 4%;
   }
 
   .about_monomito_texts {
