--- a/src/components/common/section-about-monomito/styles.module.css
+++ b/src/components/common/section-about-monomito/styles.module.css
@@ -27,7 +27,7 @@
 }
 
 .about_monomito_texts p {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   font-size: 17px;
   font-weight: 400;
   text-align: center;
@@ -48,6 +48,7 @@
   color: #000;
   transition: all .3s;
   cursor: pointer;
+  margin-top: 50px;
 }
 
 .about_monomito_texts a:hover {
