--- a/src/components/team/gallery/styles.module.css
+++ b/src/components/team/gallery/styles.module.css
@@ -75,6 +75,7 @@
     width: 90%;
     font-size: 1rem;
     color:#FFF;
+    text-align: center;
 }
 
 .teamGallery_overlay {
@@ -110,15 +111,11 @@
 }
 
 .teamGallery_overlay_description p {
+    text-align: center;
     margin-top: 10px;
     font-size: 14px;
     font-weight: 400;
     color: #FFF;
-}
-
-.teamGallery_item:hover .teamGallery_overlay {
-    opacity: 1;
-    visibility: visible;
 }
 
 @media only screen and (max-width: 640px) {
@@ -132,6 +129,19 @@
 
     .teamGallery_slider {
         grid-template-columns: repeat(1, 1fr);
+    }
+    .teamGallery_item .teamGallery_overlay {
+        opacity: 1;
+        visibility: visible;
+        position: relative;
+        padding-top: 10px;
+        padding-bottom: 50px;
+    }
+    .teamGallery_info {
+        display: none;
+    }
+    .teamGallery_picture{
+        display: none;
     }
 }
 
@@ -150,5 +160,23 @@
 
     .teamGallery_item h2 {
         margin-top: 8px;
+    }
+    .teamGallery_item .teamGallery_overlay {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .teamGallery_item .teamGallery_overlay {
+        opacity: 1;
+        position: relative;
+        visibility: visible;
+        padding-top: 10px;
+        padding-bottom: 50px;
+    }
+    .teamGallery_info {
+        display: none;
+    }
+    .teamGallery_picture{
+        display: none;
     }
 }
