--- a/src/components/homepage/section-banner/styles.module.css
+++ b/src/components/homepage/section-banner/styles.module.css
@@ -43,14 +43,14 @@
   display: flex;
   flex-direction: column-reverse;
   width: 100vw;
-  justify-content: end;
-  align-items: end;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 
 .section_one_logo_monomito_image {
   display: flex;
-  justify-content: end;
-  align-items: end;
+  justify-content: flex-end;
+  align-items: flex-end;
   margin-bottom: 3vh;
   margin-right: 3vh;
 }
